# aws-spawner

./: README.md  setup.cfg
aws_spawner/: __init__.py  spawner.py
deploy/: cloudformation.yaml  eslavich-ec2-jh-params.json  provision_stack.yaml  start_notebook.py
deploy/files/: cloudformation-new.yaml  cloudformation.yaml
deploy/hub_host/: jupyterhub_config.py
deploy/notebook_host/: .bashrc  start_notebook.sh
deploy/notebook_host/example_notebooks/: calibration_demo.ipynb
deploy/old/: README.md  aws_setup.yml  git_askpass.py  install_hub.yml  inventory.yml  setup.yml  update_sources.yml
deploy/old/hub_host/: jupyterhub_config.py
deploy/old/notebook_host/: .bash_profile  start_notebook.py
