[metadata]
name = aws_spawner
provides = aws_spawner
package_name = aws_spawner
author = STScI
author_email = help@stsci.edu
license = BSD 3-Clause
license_file = LICENSE.rst
description = AWS Spawner for JupyterHub
long_description = file: README.md
url = https://github.com/spacetelescope/aws_spawner
github_project = spacetelescope/aws_spawner

[options]
packages = find:
zip_safe = False
python_requires = >=3.7
setup_requires =
    setuptools >=41.0.1, <42
    setuptools_scm >=3.3.3, <4
install_requires =
    jupyterhub >= 1.0.0, <2
    boto3 >= 1.9.214, <2
[options.extras_require]
dev =
    black >=19.3b0, <20
    flake8
    pytest >=5.0.1, <6
    pytest-cov >= 2.7.1, <3
    tox >=3.13.2, <4
docs =
    sphinx >2, <3
    sphinx_rtd_theme
    stsci_rtd_theme

[options.entry_points]
jupyterhub.spawners =
    aws_spawner = aws_spawner:AwsSpawner

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg

[tool:pytest]
testpaths = tests